Take a Number And Sum Its Digits Raised... sol

--- a/Persistent Bugger.ipynb
+++ b/Persistent Bugger.ipynb
@@ -37,8 +37,15 @@
     "        count += 1\n",
     "    return count\n",
     "\n",
-    "per(25)"
+    "persistence(25)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
